--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image" href="https://dynamic.brandcrowd.com/asset/logo/74e1a370-c7b8-42fb-b427-cc61ff946bc6/logo-search-grid-2x?logoTemplateVersion=1&v=638179880049600000&text=Education" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>EduVentures</title>
 
 </head>
 
